--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
 
   <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
 
+  <depend version_gte="1.5.2">python-six</depend>
   <depend version_gte="1.11.19">rospy</depend>
   <depend version_gte="0.5.9">std_msgs</depend>
   <depend version_gte="2.9.1">marshmallow</depend>
