--- a/package.xml
+++ b/package.xml
@@ -15,11 +15,16 @@
   <url type="bugtracker">https://bitbucket.org/yujinrobot/gopher_common/issues</url>
 
   <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
+  <buildtool_depend version_gte="0.2.0">catkin_pip</buildtool_depend>
 
   <depend version_gte="1.5.2">python-six</depend>
   <depend version_gte="1.11.19">rospy</depend>
   <depend version_gte="0.5.9">std_msgs</depend>
   <depend version_gte="2.9.1">marshmallow</depend>
+
+  <!-- we depend on these here just because we embed tests inside the package -->
+  <depend version_gte="2.8.0">python-pytest</depend>  <!-- version based on hypothesis requirements but trusty only has 2.5.1, which seems to work anyway... -->
+  <depend version_gte="3.0.1">hypothesis</depend>  <!-- backport as rospackage for indigo and jade, but system package from xenial -->
 
   <!-- documentation dependencies -->
   <doc_depend version_gte="0.2.10">python-catkin-pkg</doc_depend>
