--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <depend version_gte="1.11.19">rospy</depend>
   <depend version_gte="0.5.9">std_msgs</depend>
   <depend version_gte="2.9.1">marshmallow</depend>
+  <depend version_gte="0.1.1">pyros_msgs</depend>
 
   <export>
     <rosdoc config="rosdoc.yaml"/>
