fixing test environments with travis and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 # tox.ini , put in same dir as setup.py
 [tox]
 
+skip_missing_interpreters=True
+
 envlist =
 
   # based on ros distro with ubuntu debs base
@@ -10,14 +12,14 @@ envlist =
   py27-py_{indigo,kinetic,lunar,latest},
 
   # Proper py3 version for LTS releases
-  py34-debs_indigo,
-  py35-debs_kinetic,
+  #py34-debs_indigo,
+  #py35-debs_kinetic,
 
   # based on ros distro with ubuntu debs base
-  py36-debs_{lunar},
+  #py36-debs_{lunar},
 
   # based on ros distro with python3 base
-  py36-py_{lunar,latest}
+  #py36-py_{lunar,latest}
 
 #, pypy
 #, pypy3
@@ -46,6 +48,10 @@ ROS_DISTRO =
 
 [testenv]
 
+setenv =
+    # prevent tox to create a bunch of useless bytecode files in tests/
+    PYTHONDONTWRITEBYTECODE=1
+
 # Dependencies matching the version in each ROS distro
 deps =
     # TODO : check why / how install_requires are installed or not in tox environments...
@@ -70,8 +76,10 @@ deps =
 # to always force recreation and avoid unexpected side effects
 recreate=True
 
+changedir = tests
+
 commands=
     # we want to make sure python finds the installed package in tox env
     # and doesn't confuse with pyc generated during dev (which happens if we use self test feature here)
-    py.test --pyargs tests {posargs}
+    py.test --basetemp={envtmpdir} --pyargs pyros_schemas.ros.tests {posargs}
     # Note : -s here might break your terminal...
