moving tests outside of package and fixing tox

--- a/tox.ini
+++ b/tox.ini
@@ -81,5 +81,5 @@ changedir = tests
 commands=
     # we want to make sure python finds the installed package in tox env
     # and doesn't confuse with pyc generated during dev (which happens if we use self test feature here)
-    py.test --basetemp={envtmpdir} --pyargs pyros_schemas.ros.tests {posargs}
+    py.test --basetemp={envtmpdir} test_pyros_schemas {posargs}
     # Note : -s here might break your terminal...
