--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "tests/std_msgs"]
-	path = tests/std_msgs
+[submodule "tests/rosdeps/std_msgs"]
+	path = tests/rosdeps/std_msgs
 	url = https://github.com/ros/std_msgs.git
-[submodule "tests/ros_comm_msgs"]
-	path = tests/ros_comm_msgs
+[submodule "tests/rosdeps/ros_comm_msgs"]
+	path = tests/rosdeps/ros_comm_msgs
 	url = https://github.com/ros/ros_comm_msgs.git
