cleanup settings and now using hypothesis profiles moved std_msgs tests.

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ deps =
     py_latest: -rrequirements/python/tests.txt
 
 # to always force recreation and avoid unexpected side effects
-recreate=False
+recreate=True
 
 changedir = tests
 
