--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
   - pip install tox tox-travis
 
 script:
-  - tox
+  - tox -- --hypothesis-profile travis
 
 notifications:
   email: false
