--- a/tox.ini
+++ b/tox.ini
@@ -12,14 +12,14 @@ envlist =
   py27-py_{indigo,kinetic,lunar,latest},
 
   # Proper py3 version for LTS releases
-  #py34-debs_indigo,
-  #py35-debs_kinetic,
+  py34-debs_indigo,
+  py35-debs_kinetic,
 
   # based on ros distro with ubuntu debs base
-  #py36-debs_{lunar},
+  py36-debs_{lunar},
 
   # based on ros distro with python3 base
-  #py36-py_{lunar,latest}
+  py36-py_{lunar,latest}
 
 #, pypy
 #, pypy3
@@ -81,5 +81,5 @@ changedir = tests
 commands=
     # we want to make sure python finds the installed package in tox env
     # and doesn't confuse with pyc generated during dev (which happens if we use self test feature here)
-    py.test --basetemp={envtmpdir} test_pyros_schemas {posargs}
+    python -m pytest --basetemp={envtmpdir} test_pyros_schemas {posargs}
     # Note : -s here might break your terminal...
