--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ env:
   # These will be used to determine the proper version of our dependencies
   # We will NOT rely on a full ROS installation.
   - ROS_DISTRO=indigo TOX_PARAMS=
-  - ROS_DISTRO=kinetic TOX_PARAMS=--hypothesis-profile travis
+  - ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
   # Latest not LTS
-  - ROS_DISTRO=lunar TOX_PARAMS=--hypothesis-profile travis
+  - ROS_DISTRO=lunar TOX_PARAMS="--hypothesis-profile travis"
   # to get latest dependencies (not released in a ROS distro yet)
-  - ROS_DISTRO=latest TOX_PARAMS=--hypothesis-profile travis
+  - ROS_DISTRO=latest TOX_PARAMS="--hypothesis-profile travis"
 
 python:
   # always test python2 (default supported python version for ROS1)
@@ -29,7 +29,7 @@ matrix:
     - python: 3.4
       env: ROS_DISTRO=indigo
     - python: 3.5
-      env: ROS_DISTRO=kinetic
+      env: ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
   exclude:
     # explicitely exclude python3 version not supported by matching linux distro
     - python: 3.6
