--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
 env:
   # These will be used to determine the proper version of our dependencies
   # We will NOT rely on a full ROS installation.
-  - ROS_DISTRO=indigo TOX_PARAMS=
+  - ROS_DISTRO=indigo
   - ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
   # Latest not LTS
   - ROS_DISTRO=lunar TOX_PARAMS="--hypothesis-profile travis"
@@ -35,7 +35,7 @@ matrix:
     - python: 3.6
       env: ROS_DISTRO=indigo
     - python: 3.6
-      env: ROS_DISTRO=kinetic
+      env: ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
 
 
 before_install:
