--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ python:
   # always test python2 (default supported python version for ROS1)
   - 2.7
   # always test latest python3 (to guarantee recent python support)
-  - 3.6
+  # TODO - 3.6
   #- pypy
   #- pypy3
 
@@ -26,10 +26,10 @@ python:
 matrix:
   include:
     # explicitely matching python version to the version on the ubuntu distro supported by the ROS LTS distro
-    - python: 3.4
-      env: ROS_DISTRO=indigo
-    - python: 3.5
-      env: ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
+    #TODO - python: 3.4
+    #  env: ROS_DISTRO=indigo
+    #TODO - python: 3.5
+    #  env: ROS_DISTRO=kinetic TOX_PARAMS="--hypothesis-profile travis"
   exclude:
     # explicitely exclude python3 version not supported by matching linux distro
     - python: 3.6
